画面にデータ取得ボタンを追加

--- a/www/index.html
+++ b/www/index.html
@@ -42,5 +42,7 @@
     <button id="btnA" class="btn" onclick="register()">Register</button>
   </div>
   <div id="message">message area</div>
+  <div id="button">
+    <button id ="btnB" class="btn" onclick="fetch()">Fetch</button>
 </body>
 </html>
